# SmartSecurityCamera

./: .gitignore  README.md
ImageProject/: CMakeLists.txt  Dockerfile
ImageProject/Camera/: CMakeLists.txt  Camera.cpp
ImageProject/ImageProcessingTest/: CMakeLists.txt  test.cpp
ImageProject/ImageProject/: CMakeCache.txt  CMakeLists.txt  CSV_Save.cpp  CSV_Save.h  Configuration.cpp  Configuration.h  CreateFrame.cpp  CreateFrame.h  FramesQueue.cpp  FramesQueue.h  GetFrame.cpp  GetFrame.h  Logging.cpp  Logging.h  SaveData.cpp  SaveData.h  Sqlite.cpp  Sqlite.h  Yolo.cpp  Yolo.h  cmake_install.cmake
ImageProject/ImageProject/Camera/: cmake_install.cmake
ImageProject/ImageProject/ImageProject/: cmake_install.cmake
ImageProject/ImageProject/Server/: cmake_install.cmake
ImageProject/ImageProject/Service/: cmake_install.cmake
ImageProject/ImageProject/files/: coco.names  configure.json
ImageProject/Server/: CMakeLists.txt  Server.cpp
ImageProject/Service/: CMakeLists.txt
ImageProject/Service/my_proto/: camera.proto
